--- a/godseed-webapp/index.html
+++ b/godseed-webapp/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Godseed</title>
+    <link href="./src/output.css" rel="stylesheet">
+
     <style>
 
     </style>
