--- a/godseed-webapp/index.html
+++ b/godseed-webapp/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Godseed</title>
-    <link href="./src/output.css" rel="stylesheet">
-
-    <style>
-
-    </style>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <link href="/favicon.ico" rel="icon">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Godseed</title>
+  <!-- Update the path to reflect where the output CSS file is located -->
+  <link href="/assets/output.css" rel="stylesheet">
+</head>
+<body>
+<div id="app"></div>
+<!-- Update the path to reflect where the built JS file is located -->
+<script src="/src/main.js" type="module"></script>
+</body>
 </html>
